# simple-local-rag

./: .gitignore  00-simple-local-rag.ipynb  README.md  pyproject.toml  requirements.txt
data/transcripts/: 0030UNM0F0EE904QL6U362LAES00GUPU_2019-06-24_12-01-23-01A701D1-1066A922-00000001_transcript_669cccdb-0000-257f-a62c-582429c33a2c.json  0030UNM0F0EE904QL6U362LAES00HED0_2019-06-24_18-53-34-020601D1-10384A70-00000001_transcript_669d723f-0000-218d-a7f2-582429c33928.json
flashrag/: dataloader.py  f1_metric_news_categorization.py  main.py  utils.py
video_notebooks/: 00-simple-local-rag-video.ipynb
